client/src/styles/App.css
.App {
   text-align: center;
}

.App-logo {
  height: 35vmin;
  pointer-events: none;
}

.App-header {
  min-height: 80vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.Logo-btn {
   background-image: url(../logos/logo.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   box-shadow: none !important;
   background-color: white !important;
}

.Search-container {
   width: 100%;
   height: 100%;
   position: relative;
   z-index: -1;
}

.Search-bar {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
}

.Search-input {
   width: 40vw;
}

.Search-autocomplete-menu {
   width: 40vw;
   position: absolute;
   top: 100%;
   left: 50%;
   transform: translate(-50%, -4%);
   z-index: 1;
   display: flex;
   flex-direction: column;
   background-color: white;
   border-style: solid;
   border-color: lightgrey;
   border-width: 1px;
   border-radius: 10px;
}

.Top-menu {
   padding-bottom: 2px;
}

.Results-container {
   margin: 0 auto 0;
   width: fit-content;
}

.Results-header {
   padding: 1.25vh 0;
   display: flex;
   align-items: center;
}

.Results-title {
   margin: 0;
}

.No-results-header {
   padding: 2vh 0;
}

.Sort-btn-container {
   margin-left: auto;
}

.Sort-btn {
   border-radius: 20px !important;
}

.Grid-container {
   margin: 0 auto 0;
}

.Spinner-container {
   display: flex;
   height: 85vh;
   align-items: center;
   justify-content: center;
}

.Item-card {
   border-style: solid;
   border-color: lightgrey;
   border-radius: 10px;
}

.Item-desc {
   display: flex;
}

.Item-name {
   padding-left: 6px;
   width: 80%;  
   text-align: left;
}

.Item-price {
   width: 20%;
}

.Item-link {
   color: black;
   text-decoration: none !important;
}

.Item-link:hover {
   color: black;
   text-decoration: none !important;
}

.Page-picker {
   display: flex;
   justify-content: center;
   align-items: center;
   width: fit-content;
   margin: 1.5vh auto 0;
}

.Page-input {
   margin-left: 10px;
   margin-right: 10px;
   width: 2.5em !important;
}

.Page-up-btn {
   margin-left: 10px;
}

.Page-down-btn {
   margin-right: 10px;
}

.User-form {
   display: flex;
   height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
}

.User-form-header {
   margin-bottom: 60px;
   font-size: 2.5em;
   font-weight: bold;
}

.User-form-input {
   width: 260px;
   margin: 0 auto;
}

.User-form-btn {
   margin-top: 30px;
}

.Create-user-link {
   margin-top: 30px;
}

